--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -2,12 +2,12 @@
 
 .page-body {
   margin-top: 64px;
-  padding: 64px 0 20px 0;
+  padding: 36px 0 20px 0;
   background: $white;
   min-height: 320px;
 }
 
-.blog-page {
+.blog-page, .contact-page, .about-page {
   min-height: 65vh;
 }
 
