Fixes pages-text format at 500px width

--- a/main.css
+++ b/main.css
@@ -2877,4 +2877,8 @@ ul {
   .details {
     margin-top: 8px;
     font-size: 14px;
-    line-height: 18px; } }
+    line-height: 18px; }
+  .page-title, .page-text, .contact-wrapper {
+    width: 60%; }
+  .contact-wrapper {
+    width: 65%; } }
