--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -90,4 +90,10 @@
     font-size: 14px;
     line-height: 18px;
   }
+  .page-title, .page-text, .contact-wrapper {
+    width: 60%;
+  }
+  .contact-wrapper {
+    width: 65%;
+  }
 }
