--- a/sass/main.scss
+++ b/sass/main.scss
@@ -221,7 +221,7 @@ ul {
 .options {
   text-decoration: underline;
   margin: 0;
-  float: left;
+  float: right;
   width: 25vw;
   font-size: 10px;
   line-height: 32px;
