--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -10,42 +10,48 @@
   .page-body {
     min-height: 72vh;
   }
+  .built-by, .logo-wrapper-bottom {
+    float: right;
+  }
+}
+
+@media screen and (min-width: 400px) and (max-width: 749px) {
   .describe-title {
     max-width: 80%;
   }
   .describe {
     max-width: 70%;
   }
-  .built-by, .logo-wrapper-bottom {
-    float: right;
-  }
 }
 
 @media screen and (min-width: 500px) {
+  .masthead {
+    border-bottom: none;
+  }
   .line-wrapper {
     display: none;
   }
   .options-wrapper {
     width: 50vw;
     top: 0;
-    right: 16px;
+    right: 0;
     height: 64px;
     z-index: 3;
-    background: transparent;
+    background: $anchor;
+    border-bottom: none;
   }
   .options {
     height: 64px;
     line-height: 54px;
     padding-top: 12px;
     width: 25%;
-    font-size: 12px;
   }
   .intro {
     height: 85vh;
   }
   .headline {
     font-size: 2.5em;
-    padding-top: 128px;
+    padding-top: 200px;
   }
   .subtitle {
     font-size: 18px;
@@ -93,7 +99,16 @@
     line-height: 18px;
     width: 240px;
   }
-  .page-title, .page-text, .contact-wrapper {
+}
+
+@media screen and (min-width: 500px) and (max-width: 599px) {
+  .options {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 500px) and (max-width: 699px) {
+  .page-title, .page-text {
     width: 60%;
   }
   .contact-wrapper {
@@ -107,7 +122,7 @@
   }
   .headline {
     font-size: 3em;
-    padding-top: 180px;
+    padding-top: 256px;
   }
   .subtitle {
     font-size: 20px;
@@ -124,9 +139,6 @@
 }
 
 @media screen and (min-width: 700px) {
-  .corner {
-    margin-left: 36px;
-  }
   .bottom {
     width: 40px;
     font-size: 1.5em;
@@ -138,13 +150,114 @@
   .built-by {
     font-size: 12px;
   }
+}
+
+@media screen and (min-width: 700px) and (max-width: 749px) {
   .page-body {
     padding-top: 48px;
   }
-  .page-title, .page-text, .contact-wrapper {
+  .page-title, .page-text {
     width: 50%;
   }
   .contact-wrapper {
     width: 55%;
+  }
+  .corner {
+    margin-left: 36px;
+  }
+}
+
+@media screen and (min-width: 750px) {
+  .nav-wrapper {
+    background: $anchor;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  .masthead-and-options {
+    width: 100%;
+    max-width: 1200px;
+    height: 64px;
+    margin: 0 auto;
+  }
+  .masthead {
+    position: static;
+    width: 50%;
+    float: left;
+  }
+  .options-wrapper {
+    position: static;
+    width: 50%;
+    float: left;
+  }
+  .page-body {
+    margin-top: 0;
+    padding-top: 112px;
+  }
+  .describe-title {
+    max-width: 545px
+  }
+  .describe {
+    max-width: 478px;
+  }
+  .contact-option-wrapper {
+    margin-top: 48px;
+  }
+  .contact-wrapper {
+    width: 500px;
+    height: 64px;
+  }
+  .contact-icon {
+    line-height: 64px;
+  }
+  .contact-text {
+    font-size: 24px;
+    line-height: 64px;
+  }
+  .corner {
+    margin-left: 24px;
+  }
+  .footer-wrapper {
+    background: $dark;
+    width: 100%;
+  }
+  .social-and-sig {
+    width: 100%;
+    max-width: 1200px;
+    height: 48px;
+    margin: 0 auto;
+  }
+  .follow-bottom {
+    position: static;
+    width: 50%;
+    float: left;
+  }
+  .logo-wrapper-bottom {
+    position: static;
+    width: 50%;
+    float: left;
+  }
+}
+
+@media screen and (min-width: 750px) and (max-width: 1199px) {
+  .page-title, .contact-wrapper {
+    width: 560px;
+  }
+  .page-text {
+    width: 600px;
+    font-size: 1em;
+  }
+}
+
+@media screen and (min-width: 750px) and (max-width: 999px) {
+  .options {
+    max-width: 112px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .options {
+    max-width: 130px;
   }
 }
