--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -205,7 +205,7 @@
     margin-top: 48px;
   }
   .contact-wrapper {
-    width: 500px;
+    width: 70%;
     height: 64px;
   }
   .contact-icon {
@@ -240,12 +240,12 @@
   }
 }
 
-@media screen and (min-width: 750px) and (max-width: 1199px) {
+@media screen and (min-width: 750px) {
   .page-title, .contact-wrapper {
-    width: 560px;
+    max-width: 960px;
   }
   .page-text {
-    width: 600px;
+    max-width: 960px;
     font-size: 1em;
   }
 }
