Changes subtitle font

--- a/main.css
+++ b/main.css
@@ -2625,7 +2625,7 @@ ul {
   color: #FFFFFF;
   padding-top: 8px;
   margin-bottom: 8px;
-  font-family: "Monofred-Ultralight", sans-serif;
+  font-family: 'Tex Gyre Adventor';
   font-size: 14px; }
 
 .action {
