--- a/sass/main.scss
+++ b/sass/main.scss
@@ -265,7 +265,7 @@ ul {
   color: $white;
   padding-top: 8px;
   margin-bottom: 8px;
-  font-family: $light;
+  font-family: 'Tex Gyre Adventor';
   font-size: 14px;
 }
 
