--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -1,4 +1,4 @@
-/*** About ***/
+/*** Pages ***/
 
 .page-body {
   margin-top: 64px;
@@ -7,7 +7,7 @@
   min-height: 320px;
 }
 
-.blog-page, .contact-page, .about-page {
+.blog-page, .contact-page {
   height: 100vh;
   padding-bottom: 48px;
   overflow: hidden;
