--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,7 +91,7 @@ a {
   color: $dark;
   &:hover {
     cursor: pointer;
-    color: darken($emphasis, 5%);
+    color: lighten($dark, 30%);
   }
 }
 
