--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -70,6 +70,39 @@
   left: 0;
 }
 
+.blog-details-wrapper {
+  width: 70%;
+  min-height: 80px;
+  padding: 4px;
+  margin: 0 auto;
+  /*border-bottom: 1px solid $black;*/
+}
+
+.blog-graphic-wrapper {
+  width: 50%;
+  max-width: 64px;
+  float: left;
+}
+
+.blog-description-wrapper {
+  width: 100%;
+  margin: 0 auto;
+  min-height: 72px;
+  vertical-align: middle;
+  padding-top: 8px;
+}
+
+.blog-list {
+  margin-left: 80px;
+}
+
+.blog-date {
+  color: lighten($dark, 15%);
+  font-size: 10px;
+  margin-top: 8px;
+  text-decoration: none;
+}
+
 .early-post {
   height: auto;
 }
