--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -247,6 +247,12 @@
   .page-title, .contact-wrapper, .blog-details-wrapper {
     max-width: 960px;
   }
+  .blog-graphic-wrapper {
+    margin-top: 0;
+  }
+  .dont-pay-wrapper {
+    margin-top: 10px;
+  }
   .page-text {
     max-width: 960px;
     font-size: 1em;
