--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -75,13 +75,14 @@
   min-height: 80px;
   padding: 4px;
   margin: 0 auto;
-  /*border-bottom: 1px solid $black;*/
+  border-bottom: 1px solid $black;
 }
 
 .blog-graphic-wrapper {
   width: 50%;
   max-width: 64px;
   float: left;
+  margin-top: 8px;
 }
 
 .blog-description-wrapper {
@@ -100,6 +101,7 @@
   color: lighten($dark, 15%);
   font-size: 10px;
   margin-top: 8px;
+  margin-bottom: 8px;
   text-decoration: none;
 }
 
@@ -109,4 +111,16 @@
 
 .early-footer {
   position: static;
+}
+
+.dont-pay-img {
+  width: 60%;
+  min-width: 184px;
+}
+
+.dont-pay-wrapper {
+  width: 50%;
+  max-width: 64px;
+  float: left;
+  margin-top: 16px;
 }
