--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -247,6 +247,9 @@
   .page-title, .contact-wrapper, .blog-details-wrapper {
     max-width: 960px;
   }
+  .blog-details-wrapper {
+    border: none;
+  }
   .blog-graphic-wrapper {
     margin-top: 0;
   }
