--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -74,7 +74,8 @@
   width: 70%;
   min-height: 80px;
   padding: 4px;
-  margin: 0 auto;
+  margin: -1px auto 0 auto;
+  border-top: 1px solid $black;
   border-bottom: 1px solid $black;
 }
 
